<resources>
    <string name="app_name">Диспетчер</string>
    <string name="loading">Пожалуйста подождите…</string>
    <string name="error_no_internet">Проверьте подключение к интернету</string>
    <string name="unexpected_error">Возникла непредвиденная ошибка, попробуйте позже</string>
    <!--Стартовый экран-->
    <string name="login">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="driver">Водитель</string>
    <string name="customer">Заказчик</string>
    <string name="who_are_you">Кто вы?</string>
    <string name="phone_number">Номер телефона</string>
    <string name="customer_try">Я заказчик, хочу посмотреть как это работает</string>
    <string name="ru_phone_code">+7</string>
    <string name="error_wrong_number">Неправильный номер телефона</string>
    <string name="check_code_title">Подтверждение номера</string>
    <string name="check_code_details">Мы отправили СМС с кодом на номер \n%s</string>
    <string name="check_code_resend_time">Повторить отправку можно будет через \n%s</string>
    <string name="check_code_resend">Повторить</string>
    <string name="name">Имя</string>
    <string name="customer_organization">Организация(необязательно)</string>
    <string name="city">Город</string>
    <string name="registration_title">Регистрация</string>
    <string name="search_city_hint">Название города</string>
    <string name="search_city_nothing_found">Ничего не найдено</string>
    <string name="error_view_title">К сожалению, произошла ошибка</string>
    <string name="error_retry">Попробовать еще раз</string>
    <string name="orders_error_no_orders">У вас пока нет заказов. Чтобы создать заказ нажмите на кнопку + внизу экрана</string>
</resources>
